Actions
Bug #9535
closedKernel.send(:initialize_copy, Kernel) で segmentation fault
Bug #9535:
Kernel.send(:initialize_copy, Kernel) で segmentation fault
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.2.0dev (2014-02-19 trunk 45047) [x86_64-linux]
Backport:
Description
Files
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r45076.
class.c: do nothing if copying self
- class.c (rb_mod_init_copy): do nothing if copying self.
[ruby-dev:47989] [Bug #9535] - hash.c (rb_hash_initialize_copy): ditto.
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Backport changed from 1.9.3: UNKNOWN, 2.0.0: UNKNOWN, 2.1: UNKNOWN to 1.9.3: REQUIRED, 2.0.0: REQUIRED, 2.1: REQUIRED
Updated by usa (Usaku NAKAMURA) over 12 years ago
- Backport changed from 1.9.3: REQUIRED, 2.0.0: REQUIRED, 2.1: REQUIRED to 1.9.3: DONE, 2.0.0: REQUIRED, 2.1: REQUIRED
backported into ruby_1_9_3 at r45091.
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 1.9.3: DONE, 2.0.0: REQUIRED, 2.1: REQUIRED to 1.9.3: DONE, 2.0.0: DONE, 2.1: REQUIRED
r45076 was backported to ruby_2_0_0 at r45096.
Updated by naruse (Yui NARUSE) over 12 years ago
- Backport changed from 1.9.3: DONE, 2.0.0: DONE, 2.1: REQUIRED to 1.9.3: DONE, 2.0.0: DONE, 2.1: DONE
ruby_2_1 r45128 merged revision(s) 45076.
Actions