ext/bigdecimal/bigdecimal.c
@@ -2494,7 +2494,9 @@ BigDecimal_initialize_copy(VALUE self, VALUE other)
     Real *pv = rb_check_typeddata(self, &BigDecimal_data_type);
     Real *x = rb_check_typeddata(other, &BigDecimal_data_type);
 
-    DATA_PTR(self) = VpCopy(pv, x);
+    if (self != other) {
+	DATA_PTR(self) = VpCopy(pv, x);
+    }
     return self;
 }
 
