ext/zlib/zlib.c
@@ -1563,6 +1563,7 @@ rb_deflate_init_copy(VALUE self, VALUE orig)
     Data_Get_Struct(self, struct zstream, z1);
     z2 = get_zstream(orig);
 
+    if (z1 == z2) return self;
     err = deflateCopy(&z1->stream, &z2->stream);
     if (err != Z_OK) {
 	raise_zlib_error(err, 0);
